
0.9.9e Nov 24, 2004
 * install make target now strips binary
 * added pt_PT translation by Miguel Santinho
 * updated documentation

0.9.9d Nov 19, 2004
 * added FAQ: 48. How can I search the contents of a package for a file or library?
 * added czech translation by Oto Petrik
 * made head_mirror_data clear_head_cache write_head_cache read_head_cache
   gen_filename_from_url gen_head_cache_filename get_md5sum non static
 * moved str_replace_chr to common.[ch]
 * during --dist-upgrade, dist-upgrade loop now happens before regular upgrade
 * updated --install target to assume package being requested is higher priority
   than existing installed package when there is a conflict
 * updated is_conflicted() to return the conflicted pkg;
 * added zlib as required to slack-required
 * --install no longer recursively install deps that where excluded
 * updated FAQ, updating #9 concerning dist-upgrade
 * added html version of FAQ, contributed by Piotr Simon
 * polish translation update by Piotr Simon
 * proper German translation contributed by Niklas Volbers
 * tightened the scope of some variables
 * --dist-upgrade now grabs the most up to date version of the
   required base package
 * changed requirement for glibc to glibc-solibs
 * documentation updates
 * misc code cleanups

0.9.9c Oct 13, 2004
 * updated src/transaction.c:add_deps_to_trans() for new get_pkg_dependencies
 * finally cleaned up get_pkg_dependencies, now --ignore-dep only ignores the
   broken dep, not all deps if one is broken
 * changed --disable-dep-check to --no-dep
 * changed --no-dep to --ignore-dep
 * merged Michel Hermier's purge_old_cached_pkgs() patch with some modifications
 * merged Michel Hermier's ask_yes_no() patch to common.[ch] and transation.c
 * added init_pkg_action_args() and free_pkg_action_args()
 * merged Michel Hermier's main.c patch cleaning up main
 * added support for debian style "or" conditional in slack-required